# QrGen

./: CMakeLists.txt  README.md  qrgen.cpp  t.txt
.cache/clangd/index/: qrcodegen.cpp.9D4B58911BC3438A.idx  qrcodegen.hpp.F14D0220BC7AB390.idx  qrgen.cpp.2856771EE0F7E919.idx
